// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SingleDropdown should render correctly 1`] = `
.c0 {
  margin-bottom: 0;
  min-width: 100px;
  box-sizing: border-box;
  color: #383838;
  background-color: rgba(0,0,0,0);
  background-size: 15px;
  background-repeat: no-repeat;
  background-position: 95% 0%;
  background-image: url(data:image/svg+xml;base64,PHN2ZyBhcmlhLWhpZGRlbj0idHJ1ZSIgZGF0YS1wcmVmaXg9ImZhcyIgZGF0YS1pY29uPSJzb3J0LWRvd24iIGNsYXNzPSJzdmctaW5saW5lLS1mYSBmYS1zb3J0LWRvd24gZmEtdy0xMCIgcm9sZT0iaW1nIiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAzMjAgNTEyIj48cGF0aCBmaWxsPSJjdXJyZW50Q29sb3IiIGQ9Ik00MSAyODhoMjM4YzIxLjQgMCAzMi4xIDI1LjkgMTcgNDFMMTc3IDQ0OGMtOS40IDkuNC0yNC42IDkuNC0zMy45IDBMMjQgMzI5Yy0xNS4xLTE1LjEtNC40LTQxIDE3LTQxeiI+PC9wYXRoPjwvc3ZnPgo=);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 16px;
  font-weight: 300;
  text-transform: none;
  font-style: normal;
  border-radius: 5px;
  height: 2.5rem;
  line-height: 2.5rem;
  cursor: pointer;
  outline: none;
  text-align: left;
}

<ThemeProvider
  theme={
    Object {
      "azure": "#3558A8",
      "bigStone": "#152343",
      "biscay": "#153A62",
      "black": "#000",
      "blackAlpha05": "rgba(0,0,0,0.05)",
      "blackAlpha75": "rgba(0,0,0,0.75)",
      "blueWood": "#27324B",
      "cerulean": "#10ADE4",
      "gold": "#FFCA00",
      "gray0": "#F8F8F8",
      "gray1": "#EEF2F5",
      "gray2": "#CCC",
      "gray3": "#999B9E",
      "gray4": "#757679",
      "gray5": "#545456",
      "gray6": "#383838",
      "gray7": "#040d25",
      "orient": "#004A7C",
      "powderBlue": "#B2D5E5",
      "transparent": "rgba(0, 0, 0, 0)",
      "white": "#FFF",
      "whiteAlpha10": "rgba(255,255,255,0.1)",
      "whiteAlpha75": "rgba(255,255,255,0.75)",
    }
  }
>
  <SingleDropdown
    backgroundColor="transparent"
    capitalize={false}
    color="gray6"
    italic={false}
    items={
      Array [
        Object {
          "text": "Item1",
          "value": 1,
        },
        Object {
          "text": "Item2",
          "value": 2,
        },
        Object {
          "text": "Item3",
          "value": 3,
        },
        Object {
          "text": "Item4",
          "value": 4,
        },
        Object {
          "text": "Item5",
          "value": 5,
        },
        Object {
          "text": "Item6",
          "value": 6,
        },
        Object {
          "text": "Item7",
          "value": 7,
        },
        Object {
          "text": "Item8",
          "value": 8,
        },
        Object {
          "text": "Item9",
          "value": 9,
        },
      ]
    }
    onChange={[MockFunction]}
    size="16px"
    uppercase={false}
    weight={300}
  >
    <styled.select
      backgroundColor="transparent"
      capitalize={false}
      color="gray6"
      italic={false}
      onChange={[MockFunction]}
      size="16px"
      uppercase={false}
      weight={300}
    >
      <select
        className="c0"
        color="gray6"
        onChange={[MockFunction]}
        size="16px"
      >
        <option
          key="1"
          value={1}
        >
          Item1
        </option>
        <option
          key="2"
          value={2}
        >
          Item2
        </option>
        <option
          key="3"
          value={3}
        >
          Item3
        </option>
        <option
          key="4"
          value={4}
        >
          Item4
        </option>
        <option
          key="5"
          value={5}
        >
          Item5
        </option>
        <option
          key="6"
          value={6}
        >
          Item6
        </option>
        <option
          key="7"
          value={7}
        >
          Item7
        </option>
        <option
          key="8"
          value={8}
        >
          Item8
        </option>
        <option
          key="9"
          value={9}
        >
          Item9
        </option>
      </select>
    </styled.select>
  </SingleDropdown>
</ThemeProvider>
`;

exports[`SingleDropdown should render correctly with backgroundColor 1`] = `
.c0 {
  margin-bottom: 0;
  min-width: 100px;
  box-sizing: border-box;
  color: #383838;
  background-color: #004A7C;
  background-size: 15px;
  background-repeat: no-repeat;
  background-position: 95% 0%;
  background-image: url(data:image/svg+xml;base64,PHN2ZyBhcmlhLWhpZGRlbj0idHJ1ZSIgZGF0YS1wcmVmaXg9ImZhcyIgZGF0YS1pY29uPSJzb3J0LWRvd24iIGNsYXNzPSJzdmctaW5saW5lLS1mYSBmYS1zb3J0LWRvd24gZmEtdy0xMCIgcm9sZT0iaW1nIiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAzMjAgNTEyIj48cGF0aCBmaWxsPSJjdXJyZW50Q29sb3IiIGQ9Ik00MSAyODhoMjM4YzIxLjQgMCAzMi4xIDI1LjkgMTcgNDFMMTc3IDQ0OGMtOS40IDkuNC0yNC42IDkuNC0zMy45IDBMMjQgMzI5Yy0xNS4xLTE1LjEtNC40LTQxIDE3LTQxeiI+PC9wYXRoPjwvc3ZnPgo=);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 16px;
  font-weight: 300;
  text-transform: none;
  font-style: normal;
  border-radius: 5px;
  height: 2.5rem;
  line-height: 2.5rem;
  cursor: pointer;
  outline: none;
  text-align: left;
}

<ThemeProvider
  theme={
    Object {
      "azure": "#3558A8",
      "bigStone": "#152343",
      "biscay": "#153A62",
      "black": "#000",
      "blackAlpha05": "rgba(0,0,0,0.05)",
      "blackAlpha75": "rgba(0,0,0,0.75)",
      "blueWood": "#27324B",
      "cerulean": "#10ADE4",
      "gold": "#FFCA00",
      "gray0": "#F8F8F8",
      "gray1": "#EEF2F5",
      "gray2": "#CCC",
      "gray3": "#999B9E",
      "gray4": "#757679",
      "gray5": "#545456",
      "gray6": "#383838",
      "gray7": "#040d25",
      "orient": "#004A7C",
      "powderBlue": "#B2D5E5",
      "transparent": "rgba(0, 0, 0, 0)",
      "white": "#FFF",
      "whiteAlpha10": "rgba(255,255,255,0.1)",
      "whiteAlpha75": "rgba(255,255,255,0.75)",
    }
  }
>
  <SingleDropdown
    backgroundColor="orient"
    capitalize={false}
    color="gray6"
    italic={false}
    items={
      Array [
        Object {
          "text": "Item1",
          "value": 1,
        },
        Object {
          "text": "Item2",
          "value": 2,
        },
        Object {
          "text": "Item3",
          "value": 3,
        },
        Object {
          "text": "Item4",
          "value": 4,
        },
        Object {
          "text": "Item5",
          "value": 5,
        },
        Object {
          "text": "Item6",
          "value": 6,
        },
        Object {
          "text": "Item7",
          "value": 7,
        },
        Object {
          "text": "Item8",
          "value": 8,
        },
        Object {
          "text": "Item9",
          "value": 9,
        },
      ]
    }
    onChange={[MockFunction]}
    size="16px"
    uppercase={false}
    weight={300}
  >
    <styled.select
      backgroundColor="orient"
      capitalize={false}
      color="gray6"
      italic={false}
      onChange={[MockFunction]}
      size="16px"
      uppercase={false}
      weight={300}
    >
      <select
        className="c0"
        color="gray6"
        onChange={[MockFunction]}
        size="16px"
      >
        <option
          key="1"
          value={1}
        >
          Item1
        </option>
        <option
          key="2"
          value={2}
        >
          Item2
        </option>
        <option
          key="3"
          value={3}
        >
          Item3
        </option>
        <option
          key="4"
          value={4}
        >
          Item4
        </option>
        <option
          key="5"
          value={5}
        >
          Item5
        </option>
        <option
          key="6"
          value={6}
        >
          Item6
        </option>
        <option
          key="7"
          value={7}
        >
          Item7
        </option>
        <option
          key="8"
          value={8}
        >
          Item8
        </option>
        <option
          key="9"
          value={9}
        >
          Item9
        </option>
      </select>
    </styled.select>
  </SingleDropdown>
</ThemeProvider>
`;

exports[`SingleDropdown should render correctly with capitalize 1`] = `
.c0 {
  margin-bottom: 0;
  min-width: 100px;
  box-sizing: border-box;
  color: #383838;
  background-color: rgba(0,0,0,0);
  background-size: 15px;
  background-repeat: no-repeat;
  background-position: 95% 0%;
  background-image: url(data:image/svg+xml;base64,PHN2ZyBhcmlhLWhpZGRlbj0idHJ1ZSIgZGF0YS1wcmVmaXg9ImZhcyIgZGF0YS1pY29uPSJzb3J0LWRvd24iIGNsYXNzPSJzdmctaW5saW5lLS1mYSBmYS1zb3J0LWRvd24gZmEtdy0xMCIgcm9sZT0iaW1nIiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAzMjAgNTEyIj48cGF0aCBmaWxsPSJjdXJyZW50Q29sb3IiIGQ9Ik00MSAyODhoMjM4YzIxLjQgMCAzMi4xIDI1LjkgMTcgNDFMMTc3IDQ0OGMtOS40IDkuNC0yNC42IDkuNC0zMy45IDBMMjQgMzI5Yy0xNS4xLTE1LjEtNC40LTQxIDE3LTQxeiI+PC9wYXRoPjwvc3ZnPgo=);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 16px;
  font-weight: 300;
  text-transform: capitalize;
  font-style: normal;
  border-radius: 5px;
  height: 2.5rem;
  line-height: 2.5rem;
  cursor: pointer;
  outline: none;
  text-align: left;
}

<ThemeProvider
  theme={
    Object {
      "azure": "#3558A8",
      "bigStone": "#152343",
      "biscay": "#153A62",
      "black": "#000",
      "blackAlpha05": "rgba(0,0,0,0.05)",
      "blackAlpha75": "rgba(0,0,0,0.75)",
      "blueWood": "#27324B",
      "cerulean": "#10ADE4",
      "gold": "#FFCA00",
      "gray0": "#F8F8F8",
      "gray1": "#EEF2F5",
      "gray2": "#CCC",
      "gray3": "#999B9E",
      "gray4": "#757679",
      "gray5": "#545456",
      "gray6": "#383838",
      "gray7": "#040d25",
      "orient": "#004A7C",
      "powderBlue": "#B2D5E5",
      "transparent": "rgba(0, 0, 0, 0)",
      "white": "#FFF",
      "whiteAlpha10": "rgba(255,255,255,0.1)",
      "whiteAlpha75": "rgba(255,255,255,0.75)",
    }
  }
>
  <SingleDropdown
    backgroundColor="transparent"
    capitalize={true}
    color="gray6"
    italic={false}
    items={
      Array [
        Object {
          "text": "Item1",
          "value": 1,
        },
        Object {
          "text": "Item2",
          "value": 2,
        },
        Object {
          "text": "Item3",
          "value": 3,
        },
        Object {
          "text": "Item4",
          "value": 4,
        },
        Object {
          "text": "Item5",
          "value": 5,
        },
        Object {
          "text": "Item6",
          "value": 6,
        },
        Object {
          "text": "Item7",
          "value": 7,
        },
        Object {
          "text": "Item8",
          "value": 8,
        },
        Object {
          "text": "Item9",
          "value": 9,
        },
      ]
    }
    onChange={[MockFunction]}
    size="16px"
    uppercase={false}
    weight={300}
  >
    <styled.select
      backgroundColor="transparent"
      capitalize={true}
      color="gray6"
      italic={false}
      onChange={[MockFunction]}
      size="16px"
      uppercase={false}
      weight={300}
    >
      <select
        className="c0"
        color="gray6"
        onChange={[MockFunction]}
        size="16px"
      >
        <option
          key="1"
          value={1}
        >
          Item1
        </option>
        <option
          key="2"
          value={2}
        >
          Item2
        </option>
        <option
          key="3"
          value={3}
        >
          Item3
        </option>
        <option
          key="4"
          value={4}
        >
          Item4
        </option>
        <option
          key="5"
          value={5}
        >
          Item5
        </option>
        <option
          key="6"
          value={6}
        >
          Item6
        </option>
        <option
          key="7"
          value={7}
        >
          Item7
        </option>
        <option
          key="8"
          value={8}
        >
          Item8
        </option>
        <option
          key="9"
          value={9}
        >
          Item9
        </option>
      </select>
    </styled.select>
  </SingleDropdown>
</ThemeProvider>
`;

exports[`SingleDropdown should render correctly with color 1`] = `
.c0 {
  margin-bottom: 0;
  min-width: 100px;
  box-sizing: border-box;
  color: #10ADE4;
  background-color: rgba(0,0,0,0);
  background-size: 15px;
  background-repeat: no-repeat;
  background-position: 95% 0%;
  background-image: url(data:image/svg+xml;base64,PHN2ZyBhcmlhLWhpZGRlbj0idHJ1ZSIgZGF0YS1wcmVmaXg9ImZhcyIgZGF0YS1pY29uPSJzb3J0LWRvd24iIGNsYXNzPSJzdmctaW5saW5lLS1mYSBmYS1zb3J0LWRvd24gZmEtdy0xMCIgcm9sZT0iaW1nIiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAzMjAgNTEyIj48cGF0aCBmaWxsPSJjdXJyZW50Q29sb3IiIGQ9Ik00MSAyODhoMjM4YzIxLjQgMCAzMi4xIDI1LjkgMTcgNDFMMTc3IDQ0OGMtOS40IDkuNC0yNC42IDkuNC0zMy45IDBMMjQgMzI5Yy0xNS4xLTE1LjEtNC40LTQxIDE3LTQxeiI+PC9wYXRoPjwvc3ZnPgo=);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 16px;
  font-weight: 300;
  text-transform: none;
  font-style: normal;
  border-radius: 5px;
  height: 2.5rem;
  line-height: 2.5rem;
  cursor: pointer;
  outline: none;
  text-align: left;
}

<ThemeProvider
  theme={
    Object {
      "azure": "#3558A8",
      "bigStone": "#152343",
      "biscay": "#153A62",
      "black": "#000",
      "blackAlpha05": "rgba(0,0,0,0.05)",
      "blackAlpha75": "rgba(0,0,0,0.75)",
      "blueWood": "#27324B",
      "cerulean": "#10ADE4",
      "gold": "#FFCA00",
      "gray0": "#F8F8F8",
      "gray1": "#EEF2F5",
      "gray2": "#CCC",
      "gray3": "#999B9E",
      "gray4": "#757679",
      "gray5": "#545456",
      "gray6": "#383838",
      "gray7": "#040d25",
      "orient": "#004A7C",
      "powderBlue": "#B2D5E5",
      "transparent": "rgba(0, 0, 0, 0)",
      "white": "#FFF",
      "whiteAlpha10": "rgba(255,255,255,0.1)",
      "whiteAlpha75": "rgba(255,255,255,0.75)",
    }
  }
>
  <SingleDropdown
    backgroundColor="transparent"
    capitalize={false}
    color="cerulean"
    italic={false}
    items={
      Array [
        Object {
          "text": "Item1",
          "value": 1,
        },
        Object {
          "text": "Item2",
          "value": 2,
        },
        Object {
          "text": "Item3",
          "value": 3,
        },
        Object {
          "text": "Item4",
          "value": 4,
        },
        Object {
          "text": "Item5",
          "value": 5,
        },
        Object {
          "text": "Item6",
          "value": 6,
        },
        Object {
          "text": "Item7",
          "value": 7,
        },
        Object {
          "text": "Item8",
          "value": 8,
        },
        Object {
          "text": "Item9",
          "value": 9,
        },
      ]
    }
    onChange={[MockFunction]}
    size="16px"
    uppercase={false}
    weight={300}
  >
    <styled.select
      backgroundColor="transparent"
      capitalize={false}
      color="cerulean"
      italic={false}
      onChange={[MockFunction]}
      size="16px"
      uppercase={false}
      weight={300}
    >
      <select
        className="c0"
        color="cerulean"
        onChange={[MockFunction]}
        size="16px"
      >
        <option
          key="1"
          value={1}
        >
          Item1
        </option>
        <option
          key="2"
          value={2}
        >
          Item2
        </option>
        <option
          key="3"
          value={3}
        >
          Item3
        </option>
        <option
          key="4"
          value={4}
        >
          Item4
        </option>
        <option
          key="5"
          value={5}
        >
          Item5
        </option>
        <option
          key="6"
          value={6}
        >
          Item6
        </option>
        <option
          key="7"
          value={7}
        >
          Item7
        </option>
        <option
          key="8"
          value={8}
        >
          Item8
        </option>
        <option
          key="9"
          value={9}
        >
          Item9
        </option>
      </select>
    </styled.select>
  </SingleDropdown>
</ThemeProvider>
`;

exports[`SingleDropdown should render correctly with italic 1`] = `
.c0 {
  margin-bottom: 0;
  min-width: 100px;
  box-sizing: border-box;
  color: #383838;
  background-color: rgba(0,0,0,0);
  background-size: 15px;
  background-repeat: no-repeat;
  background-position: 95% 0%;
  background-image: url(data:image/svg+xml;base64,PHN2ZyBhcmlhLWhpZGRlbj0idHJ1ZSIgZGF0YS1wcmVmaXg9ImZhcyIgZGF0YS1pY29uPSJzb3J0LWRvd24iIGNsYXNzPSJzdmctaW5saW5lLS1mYSBmYS1zb3J0LWRvd24gZmEtdy0xMCIgcm9sZT0iaW1nIiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAzMjAgNTEyIj48cGF0aCBmaWxsPSJjdXJyZW50Q29sb3IiIGQ9Ik00MSAyODhoMjM4YzIxLjQgMCAzMi4xIDI1LjkgMTcgNDFMMTc3IDQ0OGMtOS40IDkuNC0yNC42IDkuNC0zMy45IDBMMjQgMzI5Yy0xNS4xLTE1LjEtNC40LTQxIDE3LTQxeiI+PC9wYXRoPjwvc3ZnPgo=);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 16px;
  font-weight: 300;
  text-transform: none;
  font-style: italic;
  border-radius: 5px;
  height: 2.5rem;
  line-height: 2.5rem;
  cursor: pointer;
  outline: none;
  text-align: left;
}

<ThemeProvider
  theme={
    Object {
      "azure": "#3558A8",
      "bigStone": "#152343",
      "biscay": "#153A62",
      "black": "#000",
      "blackAlpha05": "rgba(0,0,0,0.05)",
      "blackAlpha75": "rgba(0,0,0,0.75)",
      "blueWood": "#27324B",
      "cerulean": "#10ADE4",
      "gold": "#FFCA00",
      "gray0": "#F8F8F8",
      "gray1": "#EEF2F5",
      "gray2": "#CCC",
      "gray3": "#999B9E",
      "gray4": "#757679",
      "gray5": "#545456",
      "gray6": "#383838",
      "gray7": "#040d25",
      "orient": "#004A7C",
      "powderBlue": "#B2D5E5",
      "transparent": "rgba(0, 0, 0, 0)",
      "white": "#FFF",
      "whiteAlpha10": "rgba(255,255,255,0.1)",
      "whiteAlpha75": "rgba(255,255,255,0.75)",
    }
  }
>
  <SingleDropdown
    backgroundColor="transparent"
    capitalize={false}
    color="gray6"
    italic={true}
    items={
      Array [
        Object {
          "text": "Item1",
          "value": 1,
        },
        Object {
          "text": "Item2",
          "value": 2,
        },
        Object {
          "text": "Item3",
          "value": 3,
        },
        Object {
          "text": "Item4",
          "value": 4,
        },
        Object {
          "text": "Item5",
          "value": 5,
        },
        Object {
          "text": "Item6",
          "value": 6,
        },
        Object {
          "text": "Item7",
          "value": 7,
        },
        Object {
          "text": "Item8",
          "value": 8,
        },
        Object {
          "text": "Item9",
          "value": 9,
        },
      ]
    }
    onChange={[MockFunction]}
    size="16px"
    uppercase={false}
    weight={300}
  >
    <styled.select
      backgroundColor="transparent"
      capitalize={false}
      color="gray6"
      italic={true}
      onChange={[MockFunction]}
      size="16px"
      uppercase={false}
      weight={300}
    >
      <select
        className="c0"
        color="gray6"
        onChange={[MockFunction]}
        size="16px"
      >
        <option
          key="1"
          value={1}
        >
          Item1
        </option>
        <option
          key="2"
          value={2}
        >
          Item2
        </option>
        <option
          key="3"
          value={3}
        >
          Item3
        </option>
        <option
          key="4"
          value={4}
        >
          Item4
        </option>
        <option
          key="5"
          value={5}
        >
          Item5
        </option>
        <option
          key="6"
          value={6}
        >
          Item6
        </option>
        <option
          key="7"
          value={7}
        >
          Item7
        </option>
        <option
          key="8"
          value={8}
        >
          Item8
        </option>
        <option
          key="9"
          value={9}
        >
          Item9
        </option>
      </select>
    </styled.select>
  </SingleDropdown>
</ThemeProvider>
`;

exports[`SingleDropdown should render correctly with size 1`] = `
.c0 {
  margin-bottom: 0;
  min-width: 100px;
  box-sizing: border-box;
  color: #383838;
  background-color: rgba(0,0,0,0);
  background-size: 15px;
  background-repeat: no-repeat;
  background-position: 95% 0%;
  background-image: url(data:image/svg+xml;base64,PHN2ZyBhcmlhLWhpZGRlbj0idHJ1ZSIgZGF0YS1wcmVmaXg9ImZhcyIgZGF0YS1pY29uPSJzb3J0LWRvd24iIGNsYXNzPSJzdmctaW5saW5lLS1mYSBmYS1zb3J0LWRvd24gZmEtdy0xMCIgcm9sZT0iaW1nIiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAzMjAgNTEyIj48cGF0aCBmaWxsPSJjdXJyZW50Q29sb3IiIGQ9Ik00MSAyODhoMjM4YzIxLjQgMCAzMi4xIDI1LjkgMTcgNDFMMTc3IDQ0OGMtOS40IDkuNC0yNC42IDkuNC0zMy45IDBMMjQgMzI5Yy0xNS4xLTE1LjEtNC40LTQxIDE3LTQxeiI+PC9wYXRoPjwvc3ZnPgo=);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 32px;
  font-weight: 300;
  text-transform: none;
  font-style: normal;
  border-radius: 5px;
  height: 2.5rem;
  line-height: 2.5rem;
  cursor: pointer;
  outline: none;
  text-align: left;
}

<ThemeProvider
  theme={
    Object {
      "azure": "#3558A8",
      "bigStone": "#152343",
      "biscay": "#153A62",
      "black": "#000",
      "blackAlpha05": "rgba(0,0,0,0.05)",
      "blackAlpha75": "rgba(0,0,0,0.75)",
      "blueWood": "#27324B",
      "cerulean": "#10ADE4",
      "gold": "#FFCA00",
      "gray0": "#F8F8F8",
      "gray1": "#EEF2F5",
      "gray2": "#CCC",
      "gray3": "#999B9E",
      "gray4": "#757679",
      "gray5": "#545456",
      "gray6": "#383838",
      "gray7": "#040d25",
      "orient": "#004A7C",
      "powderBlue": "#B2D5E5",
      "transparent": "rgba(0, 0, 0, 0)",
      "white": "#FFF",
      "whiteAlpha10": "rgba(255,255,255,0.1)",
      "whiteAlpha75": "rgba(255,255,255,0.75)",
    }
  }
>
  <SingleDropdown
    backgroundColor="transparent"
    capitalize={false}
    color="gray6"
    italic={false}
    items={
      Array [
        Object {
          "text": "Item1",
          "value": 1,
        },
        Object {
          "text": "Item2",
          "value": 2,
        },
        Object {
          "text": "Item3",
          "value": 3,
        },
        Object {
          "text": "Item4",
          "value": 4,
        },
        Object {
          "text": "Item5",
          "value": 5,
        },
        Object {
          "text": "Item6",
          "value": 6,
        },
        Object {
          "text": "Item7",
          "value": 7,
        },
        Object {
          "text": "Item8",
          "value": 8,
        },
        Object {
          "text": "Item9",
          "value": 9,
        },
      ]
    }
    onChange={[MockFunction]}
    size="32px"
    uppercase={false}
    weight={300}
  >
    <styled.select
      backgroundColor="transparent"
      capitalize={false}
      color="gray6"
      italic={false}
      onChange={[MockFunction]}
      size="32px"
      uppercase={false}
      weight={300}
    >
      <select
        className="c0"
        color="gray6"
        onChange={[MockFunction]}
        size="32px"
      >
        <option
          key="1"
          value={1}
        >
          Item1
        </option>
        <option
          key="2"
          value={2}
        >
          Item2
        </option>
        <option
          key="3"
          value={3}
        >
          Item3
        </option>
        <option
          key="4"
          value={4}
        >
          Item4
        </option>
        <option
          key="5"
          value={5}
        >
          Item5
        </option>
        <option
          key="6"
          value={6}
        >
          Item6
        </option>
        <option
          key="7"
          value={7}
        >
          Item7
        </option>
        <option
          key="8"
          value={8}
        >
          Item8
        </option>
        <option
          key="9"
          value={9}
        >
          Item9
        </option>
      </select>
    </styled.select>
  </SingleDropdown>
</ThemeProvider>
`;

exports[`SingleDropdown should render correctly with uppercase 1`] = `
.c0 {
  margin-bottom: 0;
  min-width: 100px;
  box-sizing: border-box;
  color: #383838;
  background-color: rgba(0,0,0,0);
  background-size: 15px;
  background-repeat: no-repeat;
  background-position: 95% 0%;
  background-image: url(data:image/svg+xml;base64,PHN2ZyBhcmlhLWhpZGRlbj0idHJ1ZSIgZGF0YS1wcmVmaXg9ImZhcyIgZGF0YS1pY29uPSJzb3J0LWRvd24iIGNsYXNzPSJzdmctaW5saW5lLS1mYSBmYS1zb3J0LWRvd24gZmEtdy0xMCIgcm9sZT0iaW1nIiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAzMjAgNTEyIj48cGF0aCBmaWxsPSJjdXJyZW50Q29sb3IiIGQ9Ik00MSAyODhoMjM4YzIxLjQgMCAzMi4xIDI1LjkgMTcgNDFMMTc3IDQ0OGMtOS40IDkuNC0yNC42IDkuNC0zMy45IDBMMjQgMzI5Yy0xNS4xLTE1LjEtNC40LTQxIDE3LTQxeiI+PC9wYXRoPjwvc3ZnPgo=);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 16px;
  font-weight: 300;
  text-transform: uppercase;
  font-style: normal;
  border-radius: 5px;
  height: 2.5rem;
  line-height: 2.5rem;
  cursor: pointer;
  outline: none;
  text-align: left;
}

<ThemeProvider
  theme={
    Object {
      "azure": "#3558A8",
      "bigStone": "#152343",
      "biscay": "#153A62",
      "black": "#000",
      "blackAlpha05": "rgba(0,0,0,0.05)",
      "blackAlpha75": "rgba(0,0,0,0.75)",
      "blueWood": "#27324B",
      "cerulean": "#10ADE4",
      "gold": "#FFCA00",
      "gray0": "#F8F8F8",
      "gray1": "#EEF2F5",
      "gray2": "#CCC",
      "gray3": "#999B9E",
      "gray4": "#757679",
      "gray5": "#545456",
      "gray6": "#383838",
      "gray7": "#040d25",
      "orient": "#004A7C",
      "powderBlue": "#B2D5E5",
      "transparent": "rgba(0, 0, 0, 0)",
      "white": "#FFF",
      "whiteAlpha10": "rgba(255,255,255,0.1)",
      "whiteAlpha75": "rgba(255,255,255,0.75)",
    }
  }
>
  <SingleDropdown
    backgroundColor="transparent"
    capitalize={false}
    color="gray6"
    italic={false}
    items={
      Array [
        Object {
          "text": "Item1",
          "value": 1,
        },
        Object {
          "text": "Item2",
          "value": 2,
        },
        Object {
          "text": "Item3",
          "value": 3,
        },
        Object {
          "text": "Item4",
          "value": 4,
        },
        Object {
          "text": "Item5",
          "value": 5,
        },
        Object {
          "text": "Item6",
          "value": 6,
        },
        Object {
          "text": "Item7",
          "value": 7,
        },
        Object {
          "text": "Item8",
          "value": 8,
        },
        Object {
          "text": "Item9",
          "value": 9,
        },
      ]
    }
    onChange={[MockFunction]}
    size="16px"
    uppercase={true}
    weight={300}
  >
    <styled.select
      backgroundColor="transparent"
      capitalize={false}
      color="gray6"
      italic={false}
      onChange={[MockFunction]}
      size="16px"
      uppercase={true}
      weight={300}
    >
      <select
        className="c0"
        color="gray6"
        onChange={[MockFunction]}
        size="16px"
      >
        <option
          key="1"
          value={1}
        >
          Item1
        </option>
        <option
          key="2"
          value={2}
        >
          Item2
        </option>
        <option
          key="3"
          value={3}
        >
          Item3
        </option>
        <option
          key="4"
          value={4}
        >
          Item4
        </option>
        <option
          key="5"
          value={5}
        >
          Item5
        </option>
        <option
          key="6"
          value={6}
        >
          Item6
        </option>
        <option
          key="7"
          value={7}
        >
          Item7
        </option>
        <option
          key="8"
          value={8}
        >
          Item8
        </option>
        <option
          key="9"
          value={9}
        >
          Item9
        </option>
      </select>
    </styled.select>
  </SingleDropdown>
</ThemeProvider>
`;

exports[`SingleDropdown should render correctly with weight 1`] = `
.c0 {
  margin-bottom: 0;
  min-width: 100px;
  box-sizing: border-box;
  color: #383838;
  background-color: rgba(0,0,0,0);
  background-size: 15px;
  background-repeat: no-repeat;
  background-position: 95% 0%;
  background-image: url(data:image/svg+xml;base64,PHN2ZyBhcmlhLWhpZGRlbj0idHJ1ZSIgZGF0YS1wcmVmaXg9ImZhcyIgZGF0YS1pY29uPSJzb3J0LWRvd24iIGNsYXNzPSJzdmctaW5saW5lLS1mYSBmYS1zb3J0LWRvd24gZmEtdy0xMCIgcm9sZT0iaW1nIiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAzMjAgNTEyIj48cGF0aCBmaWxsPSJjdXJyZW50Q29sb3IiIGQ9Ik00MSAyODhoMjM4YzIxLjQgMCAzMi4xIDI1LjkgMTcgNDFMMTc3IDQ0OGMtOS40IDkuNC0yNC42IDkuNC0zMy45IDBMMjQgMzI5Yy0xNS4xLTE1LjEtNC40LTQxIDE3LTQxeiI+PC9wYXRoPjwvc3ZnPgo=);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 16px;
  font-weight: 500;
  text-transform: none;
  font-style: normal;
  border-radius: 5px;
  height: 2.5rem;
  line-height: 2.5rem;
  cursor: pointer;
  outline: none;
  text-align: left;
}

<ThemeProvider
  theme={
    Object {
      "azure": "#3558A8",
      "bigStone": "#152343",
      "biscay": "#153A62",
      "black": "#000",
      "blackAlpha05": "rgba(0,0,0,0.05)",
      "blackAlpha75": "rgba(0,0,0,0.75)",
      "blueWood": "#27324B",
      "cerulean": "#10ADE4",
      "gold": "#FFCA00",
      "gray0": "#F8F8F8",
      "gray1": "#EEF2F5",
      "gray2": "#CCC",
      "gray3": "#999B9E",
      "gray4": "#757679",
      "gray5": "#545456",
      "gray6": "#383838",
      "gray7": "#040d25",
      "orient": "#004A7C",
      "powderBlue": "#B2D5E5",
      "transparent": "rgba(0, 0, 0, 0)",
      "white": "#FFF",
      "whiteAlpha10": "rgba(255,255,255,0.1)",
      "whiteAlpha75": "rgba(255,255,255,0.75)",
    }
  }
>
  <SingleDropdown
    backgroundColor="transparent"
    capitalize={false}
    color="gray6"
    italic={false}
    items={
      Array [
        Object {
          "text": "Item1",
          "value": 1,
        },
        Object {
          "text": "Item2",
          "value": 2,
        },
        Object {
          "text": "Item3",
          "value": 3,
        },
        Object {
          "text": "Item4",
          "value": 4,
        },
        Object {
          "text": "Item5",
          "value": 5,
        },
        Object {
          "text": "Item6",
          "value": 6,
        },
        Object {
          "text": "Item7",
          "value": 7,
        },
        Object {
          "text": "Item8",
          "value": 8,
        },
        Object {
          "text": "Item9",
          "value": 9,
        },
      ]
    }
    onChange={[MockFunction]}
    size="16px"
    uppercase={false}
    weight={500}
  >
    <styled.select
      backgroundColor="transparent"
      capitalize={false}
      color="gray6"
      italic={false}
      onChange={[MockFunction]}
      size="16px"
      uppercase={false}
      weight={500}
    >
      <select
        className="c0"
        color="gray6"
        onChange={[MockFunction]}
        size="16px"
      >
        <option
          key="1"
          value={1}
        >
          Item1
        </option>
        <option
          key="2"
          value={2}
        >
          Item2
        </option>
        <option
          key="3"
          value={3}
        >
          Item3
        </option>
        <option
          key="4"
          value={4}
        >
          Item4
        </option>
        <option
          key="5"
          value={5}
        >
          Item5
        </option>
        <option
          key="6"
          value={6}
        >
          Item6
        </option>
        <option
          key="7"
          value={7}
        >
          Item7
        </option>
        <option
          key="8"
          value={8}
        >
          Item8
        </option>
        <option
          key="9"
          value={9}
        >
          Item9
        </option>
      </select>
    </styled.select>
  </SingleDropdown>
</ThemeProvider>
`;
